# cxx-ping-pong

./: .gitignore  CMakeLists.txt
src/: ResourceLoader.c++  main.c++
src/include/: ResourceLoader.hpp
